# ion

./: .gitignore  CMakeLists.txt  Ion.vcxproj  README.md  bi_map.h  lexer.cpp  main.cpp  source_file.h  test.ion
.run/: Ion.run.xml  IonSpec.run.xml
ast/: expressions.h
ast/abstract/: expression.h  statement.h  syntax_node.h
ast/expressions/: literal.h
include/: ast_viewer.h  diagnostics.h  file_location.h  lexer.h  location.h  parser.h  source_file.h  token.h  utility.h
include/ast/: ast.h  node.h  source_file.h  viewer.h  visitor.h  visitor_fwd.h  visitors.h
include/ast/abstract/: expression.h  statement.h  syntax_node.h
include/ast/expressions/: assignment_op.h  binary_op.h  element_access.h  identifier.h  invocation.h  literal.h  member_access.h  parenthesized.h  postfix_unary_op.h  ternary_op.h  unary_op.h
include/ast/statements/: block.h  break.h  continue.h  export.h  if.h  import.h  (+4 more)
include/ion/: binder.h  compiler.h  diagnostics.h  diagnostics_macros.h  file_location.h  intrinsics.h  lexer.h  logger.h  resolver.h  source_file.h  token.h  type_solver.h
include/syntax/: syntax_facts.h
include/testing/: runner.h
spec/: common.h  lexer_spec.h  run.cpp
src/: binder.cpp  compiler.cpp  diagnostics.cpp  file_location.cpp  lexer.cpp  logger.cpp  main.cpp  parser.cpp  resolver.cpp  source_file.cpp  symbol.cpp  token.cpp  type.cpp  type_solver.cpp
src/ast/: node.cpp  source_file.cpp  viewer.cpp
src/parsing/: common.cpp  declaration_parser.cpp  expression_parser.cpp  parser.cpp  statement_parser.cpp  type_parser.cpp
src/syntax/: syntax_facts.cpp
(+111 files in other folders)
